--- a/testi/style6.css
+++ b/testi/style6.css
@@ -1,7 +1,7 @@
 body {
   background-color: rgba(83, 87, 84, 0.986);
 }
-.container {
+.container-testimonial {
   max-width: 800px;
   margin: 0 auto;
   text-align: center;
