--- a/lp/style.css
+++ b/lp/style.css
@@ -12,6 +12,7 @@ body {
     /* Hindari pengulangan gambar */
     background-attachment: fixed;
     /* Biarkan gambar tetap saat di-scroll */
+    height: 100%;
 
 }
 
@@ -1003,6 +1004,64 @@ body {
 
 
 
+.popup {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-content {
+    padding: 20px;
+    border-radius: 8px;
+    width: auto;
+    text-align: center;
+    position: relative;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.popup-content img{
+    width: 800px;
+    margin-left: -10vh;
+
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    font-size: 60px;
+    font-weight: bolder;
+    cursor: pointer;
+    background-color: #eaeaea;
+}
+
+.close:hover {
+    color: red;
+}
+
+ .no-scroll {
+            overflow: hidden;
+        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* kontak css */
 
 
@@ -1618,6 +1677,11 @@ canvas {
     .button-unggulan {
         margin-left: 1vh;
     }
+
+    .popup-content img {
+        width: 950px;
+        margin-left: 10px;
+    }
 }
 
 /* Responsive for screens up to 768px */
@@ -1698,6 +1762,11 @@ canvas {
     }
     .card-unggulan .pop-up-image img {
         width: 95%;
+    }
+
+    .popup-content img {
+        width: 650px;
+        margin-left: 10px;
     }
 }
 
@@ -1834,7 +1903,11 @@ canvas {
         }
     }
 
-    
+    .popup-content img {
+        width: 350px;
+        margin-left: 3px; 
+        
+    }
 
 }
 
