--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
     /* Hindari pengulangan gambar */
     background-attachment: fixed;
     /* Biarkan gambar tetap saat di-scroll */
-    height: 100%;
 
 }
 
@@ -47,8 +46,6 @@ body {
     display: flex;
     position: relative;
     color: #eaeaea;
-
-
     background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(0, 164, 204) 90%);
 }
 
@@ -407,17 +404,7 @@ body {
     transform: translateY(0);
 }
 
-.parallax__fade2 {
-    --color-light-blue-rgb: 0, 164, 204;
-    background: linear-gradient(to bottom,
-            rgba(var(--color-light-blue-rgb), 1) 0%,
-            rgba(var(--color-light-blue-rgb), 0.9) 20%,
-            rgba(var(--color-light-blue-rgb), 0.7) 40%,
-            rgba(var(--color-light-blue-rgb), 0.5) 60%,
-            rgba(var(--color-light-blue-rgb), 0.3) 80%,
-            rgba(var(--color-light-blue-rgb), 0.1) 95%,
-            rgba(var(--color-light-blue-rgb), 0) 100%);
-}
+
 
 
 
@@ -440,7 +427,7 @@ body {
 .carousel-track-visimisi {
     display: flex;
     width: max-content;
-    animation: scroll 15s linear infinite;
+    animation: scroll 20s linear infinite;
     will-change: transform;
 }
 
@@ -522,7 +509,7 @@ body {
 .header-vip h1 {
     font-family: 'Montserrat', sans-serif;
     font-size: 48px;
-    font-weight: 700;
+    font-weight: bold;
     margin-bottom: 20px;
     background: linear-gradient(90deg, #ff9f43, #ffd000, #b4852f);
 }
@@ -632,6 +619,7 @@ body {
     font-size: 16px;
     margin-top: 10px;
     color: #f0f0f0;
+    font-weight: bold;
 }
 
 .pricing {
@@ -997,58 +985,6 @@ body {
     text-decoration: none;
     transition: all 0.1s ease;
 } */
-
-
-
-
-
-
-
-.popup {
-    display: none; 
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
-}
-
-.popup-content {
-    padding: 20px;
-    border-radius: 8px;
-    width: auto;
-    text-align: center;
-    position: relative;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.popup-content img{
-    width: 600px;
-    margin-left: -10vh;
-
-}
-
-.close {
-    position: absolute;
-    top: 10px;
-    right: 30px;
-    font-size: 60px;
-    font-weight: bolder;
-    cursor: pointer;
-    background-color: #eaeaea;
-}
-
-.close:hover {
-    color: red;
-}
-
- .no-scroll {
-            overflow: hidden;
-        }
-
 
 
 
@@ -1504,12 +1440,6 @@ canvas {
     margin-top: -30px;
 }
 
-.row .col-md-6 {
-    display: inline-block;
-    margin-right: 100px;
-
-}
-
 .site-footer a {
     color: #737373;
 }
@@ -1790,10 +1720,6 @@ canvas {
         width: 95%;
     }
 
-    .popup-content img {
-        width: 650px;
-        margin-left: 10px;
-    }
 }
 
 /* Responsive for screens up to 576px */
@@ -1821,31 +1747,29 @@ canvas {
 
     .parallax__header,
     .parallax__content {
-        margin-top: 50px;
         padding: 25px 30px 30px 30px;
         flex-direction: column;
         text-align: center;
     }
 
-    .row {
-        flex-direction: column;
-        align-items: center;
-    }
+
 
     .visimisi .column li{
         text-align: start;
-    }
-
-    .col-md-6 {
-        width: 100%;
     }
 
     .benefits {
         margin-left: -5vh;
     }
 
+    .benefits ul li{
+        font-size: 17px;
+    }
+
     .cta-button-vip {
-        font-size: 10px;
+        font-size: 6px;
+        font-weight: bold;
+        width: 50px;
     }
 
     .content-left {
@@ -1866,7 +1790,9 @@ canvas {
     }
 
 
-
+ .container-kontak{
+    margin-left: 18px;
+ }
     .column li {
         text-align: none;
     }
@@ -1880,8 +1806,17 @@ canvas {
         font-size: 14px;
     }
 
+    .image-card-vip{
+        padding-top: 20px;
+        margin-left: -20px;
+    }
+    .image-card-vip img{
+        width: 30vh;
+    }
+
     .pricing {
-        margin-left: 10vh;
+        margin-left: 8vh;
+
     }
 
     .container-kontak1 {
@@ -1919,6 +1854,10 @@ canvas {
         height: 450px;
     }
 
+    .site-footer{
+        padding-bottom: 20px;
+    }
+
     @keyframes scroll {
         from {
             transform: translateX(10%);
@@ -1927,12 +1866,6 @@ canvas {
         to {
             transform: translateX(-100%);
         }
-    }
-
-    .popup-content img {
-        width: 350px;
-        margin-left: 3px; 
-        
     }
 
 }
